--- a/fullstack_javascript/tables-practice/style.css
+++ b/fullstack_javascript/tables-practice/style.css
@@ -5,34 +5,35 @@ html {
 
 table {
   border-collapse: collapse;
-  border: 2px solid rgb(200, 200, 200);
+  border: 2px solid #c8c8c8;
   letter-spacing: 1px;
   font-size: 0.8rem;
   color: var(--color-error-text);
 }
 
-td,
-th {
-  border: 1px solid rgb(190, 190, 190);
+table td,
+table th {
+  border: 1px solid #bebebe;
   padding: 10px 20px;
 }
 
-th {
-  background-color: rgb(235, 235, 235);
+table th {
+  background-color: #ebebeb;
 }
 
-td {
+table td {
   text-align: center;
 }
 
-tr:nth-child(even) td {
-  background-color: rgb(250, 250, 250);
+table tr:nth-child(even) td {
+  background-color: #fafafa;
 }
 
-tr:nth-child(odd) td {
-  background-color: rgb(245, 245, 245);
+table tr:nth-child(odd) td {
+  background-color: whitesmoke;
 }
 
-caption {
+table caption {
   padding: 10px;
 }
+/*# sourceMappingURL=style.css.map */
