--- a/dynamic-ui-interactions/mobile-menus/style.css
+++ b/dynamic-ui-interactions/mobile-menus/style.css
@@ -200,31 +200,34 @@ body > div nav ul {
   left: -5rem;
   top: -5rem;
   opacity: 0;
+  transition: width height 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
 }
 body > div nav.active ul {
   left: 0;
   top: 0;
-  width: 1000px;
-  height: 65vh;
+  width: 100%;
+  height: 75vh;
   border-radius: 0 0 100% 0;
   position: absolute;
-  border-bottom: 5rem solid #93c47c;
+  border-right: 10rem solid #93c47c;
   transition: all 0.35s ease-in-out;
   opacity: 1;
-  padding-left: 5rem;
-  padding-top: 5rem;
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: -webkit-max-content;
   grid-auto-rows: max-content;
   gap: 1rem;
 }
+body > div nav.active ul li:first-child {
+  margin-top: 5rem;
+}
 body > div nav.active ul li {
   max-width: 35rem;
   font-size: 2rem;
   color: #fff;
   letter-spacing: 0.1rem;
+  margin-left: 5rem;
 }
 body > div nav.active .menu-close {
   bottom: 5rem;
