--- a/dynamic-ui-interactions/image-slider/style.css
+++ b/dynamic-ui-interactions/image-slider/style.css
@@ -156,6 +156,7 @@ body img {
 #slider-component {
   display: grid;
   grid-template-columns: 0.1fr 1fr 0.1fr;
+  grid-template-rows: 1fr auto;
 }
 #slider-component .image-slider {
   width: 400px;
@@ -170,4 +171,14 @@ body img {
 #slider-component .image-slider .slider-wrap {
   display: flex;
   flex-direction: row;
+}
+#slider-component .nav-dots {
+  grid-area: 2/1/3/4;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+#slider-component .nav-dots button.active {
+  background-color: red;
 }/*# sourceMappingURL=style.css.map */
