--- a/dynamic-ui-interactions/image-slider/style.css
+++ b/dynamic-ui-interactions/image-slider/style.css
@@ -178,7 +178,18 @@ body img {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background-color: #fff;
+}
+#slider-component .nav-dots button {
+  background-color: lightgrey;
+  color: transparent;
+  border: none;
+  margin: 5px;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
 }
 #slider-component .nav-dots button.active {
-  background-color: red;
+  background-color: grey;
 }/*# sourceMappingURL=style.css.map */
