--- a/dynamic-ui-interactions/image-slider/style.scss
+++ b/dynamic-ui-interactions/image-slider/style.scss
@@ -177,9 +177,21 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    background-color: #fff;
+
+    button {
+      background-color: lightgrey;
+      color: transparent;
+      border: none;
+      margin: 5px;
+      border-radius: 50%;
+      height: 20px;
+      width: 20px;
+      cursor: pointer;
+    }
 
     button.active {
-      background-color: red;
+      background-color: grey;
     }
   }
 }
